# encryption

./: .gitignore  Cargo.toml  README.md
scripts/: dec.py  demo_artifact.json
src/: engine.rs  entropy.rs  lib.rs
src/crypto/: ctr.rs  hash.rs  mod.rs  speck.rs
