[package]
name = "encryption"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Thomas"]
description = "A no_std Ouroboros authentication engine with Speck-128/256, Davies-Meyer key stretching, and CTR-mode payload execution."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mytechnotalent/encryption"
repository = "https://github.com/mytechnotalent/encryption"
documentation = "https://docs.rs/encryption"
categories = ["cryptography", "no-std"]
keywords = ["encryption", "crypto", "speck", "embedded", "ouroboros"]
exclude = [
    "Encryption.png",
    ".venv/**",
    "target/**",
    ".github/**",
    ".vscode/**",
    "scripts/__pycache__/**",
]

[features]
default = []
demo = ["dep:crossterm", "dep:serde", "dep:serde_json", "hardened"]
hardened = ["dep:argon2", "dep:chacha20poly1305"]

[dependencies]
# We use subtle to mathematically guarantee constant-time execution, defeating LLVM branching optimizations
subtle = { version = "2.5.0", default-features = false }
crossterm = { version = "0.29.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
chacha20poly1305 = { version = "0.10.1", default-features = false, optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
codegen-units = 1
